Bug 14619 - Missing platform specific POSIX sys_acl_set_file() functions
Summary: Missing platform specific POSIX sys_acl_set_file() functions
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-26 14:52 UTC by Ralph Böhme
Modified: 2021-03-01 10:13 UTC (History)
0 users

See Also:


Attachments
packport for 4.14 (6.91 KB, patch)
2021-02-25 14:06 UTC, Björn Jacke
bjacke: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2021-01-26 14:52:54 UTC
92b149954237a445594c993b79a860c63113d54b removed SMB_VFS_SYS_ACL_SET_FILE() and
all the VFS module implementations. But sys_acl_set_file() in vfs_default calls
into sys_acl_set_file() in sysacls.c which calls back into platform specific
modules.
Comment 1 Jeremy Allison 2021-01-26 20:29:53 UTC
Ah, I see. Damn - I missed that. Should only be called (at least on Linux) in the /proc/self/fd/%d case though.
Comment 2 Samba QA Contact 2021-01-29 13:55:21 UTC
This bug was referenced in samba master:

c8c2aef0ac613849d641e39193448f3e512caccf
Comment 3 Björn Jacke 2021-02-25 14:06:32 UTC
Created attachment 16469 [details]
packport for 4.14
Comment 4 Karolin Seeger 2021-02-26 07:55:38 UTC
Pushed to autobuild-v4-14-test.
Comment 5 Samba QA Contact 2021-02-26 10:01:03 UTC
This bug was referenced in samba v4-14-test:

72dcae2f56975804b3231315149c0a60a95c201d
Comment 6 Karolin Seeger 2021-03-01 09:30:25 UTC
Pushed to v4-14-test.
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2021-03-01 10:13:52 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.0rc4):

72dcae2f56975804b3231315149c0a60a95c201d